--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,20 +1,16 @@
 <div class="container d-flex flex-row justify-content-center">
   <div class="col-4 bg-primary d-flex flex-column align-items-center pt-3 pb-4">
-    <h2 class="fw-bold">Log In</h2>
-    <%= form_with url: sessions_path, local: true do |form| %>
+    <%= form_with(model: user, local: true) do |f| %>
       <div class="field">
         <div class="control">
-          <%= form.label :username, class: "label" %>
-          <%= form.text_field :username, class: "input", autofocus: true %>
+          <%= f.label :name, class: "label" %>
+          <%= f.text_field :name, class: "input", autofocus: true %>
         </div>
       </div>
 
       <div class="d-flex flex-row justify-content-center">
         <div class="">
-          <%= form.submit "Log in", class: "" %>
+          <%= f.submit "Sign Up", class: "button is-primary is-large is-fullwidth" %>
         </div>
       </div>
-     
     <% end %>
-  </div>
-</div>
