--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,6 +19,15 @@
   <strong>User:</strong>
   <%= @event.user_id %>
 </p>
+  <% if @event.creator == current_user %>
+    <%= button_to "Invite", users_path, params: {:event_id => @event.id}, method: :get, class: "button is-info is-large is-fullwidth" %>
+  <% else %>
+    <% invitations = Invitation.find_by(event_id: @event.id, user_id: current_user.id) %>
+    <% if invitations && !invitations.accepted? %>
+      <%= button_to "Cancel enrollment", invitation_path(id: invitations.id, event_id: @event.id, user_id: current_user.id), method: :delete, class: "button is-danger is-large is-fullwidth" %>
+    <% else %>
+    <%= button_to "Enroll", invitation_path(event_id: @event.id), method: :patch, class: "button is-primary is-large is-fullwidth" %>
+    <% end %>
+  <% end %>
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
