--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,18 @@
   </head>
 
   <body>
+    <br>
+    <br><br>
+    <br>
+     <%= link_to root_path, class: "" do %>
+          <h1 class="">Private</h1>
+        <% end %>
     <p class="control">
       <%= link_to "Create event", new_event_path, class: "button is-white" %>
     </p>
     <% if current_user %>
       <p class="control">
-        <%= link_to current_user.name, user_path(current_user), class: "button is-white" %>
+        <%= link_to current_user.username, user_path(current_user), class: "button is-white" %>
       </p>
       <p>
         <%= link_to "Logout", logout_path, class: "button is-white" %>
