--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,8 +3,8 @@
     <%= form_with(model: user, local: true) do |f| %>
       <div class="field">
         <div class="control">
-          <%= f.label :name, class: "label" %>
-          <%= f.text_field :name, class: "input", autofocus: true %>
+          <%= f.label :username, class: "label" %>
+          <%= f.text_field :username, class: "input", autofocus: true %>
         </div>
       </div>
 
