--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,29 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Events</h1>
+<h1 class="pl-3">Events</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Date</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row pl-3">
+  <h3 class="col-2">Title</h3>
+  <h3 class="col-4">Description</h3>
+  <h3 class="col-2">Date</h3>
+  <h3 class="col-1">User</h3>
+</div>
 
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= event.title %></td>
-        <td><%= event.description %></td>
-        <td><%= event.date %></td>
-        <td><%= event.user_id %></td>
-        <td><%= link_to 'Show', event %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<div class="row pl-3">
+  <% @events.each do |event| %>
+    <p class="col-2"><%= event.title %></p>
+    <p class="col-4"><%= event.description %></p>
+    <p class="col-2"><%= event.date %></p>
+    <p class="col-1"><%= event.user_id %></p>
+    <a class="col-2"><%= link_to 'Show', event %></a>
+  <% end %>
+</div>
