--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Event</h1>
-
-<%= render 'form', event: @event %>
-
-<%= link_to 'Back', events_path %>
+<div class="d-flex flex-row justify-content-center">
+  <div class="d-flex flex-column pt-3">
+    <div>
+      <h1>New Event</h1>
+    </div>
+    <div>
+      <%= render 'form', event: @event %>
+    </div>
+    <div>
+      <%= link_to 'Back', events_path %>
+    </div>
+  </div>
+</div>
