--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,17 @@
 <div class="container d-flex flex-row justify-content-center">
-  <div class="col-4 bg-primary d-flex flex-column align-items-center pt-3 pb-4">
+  <div class="col-4 d-flex flex-column align-items-center pt-3 pb-4">
     <%= form_with(model: user, local: true) do |f| %>
       <div class="field">
         <div class="control">
           <%= f.label :username, class: "label" %>
+          <br />
           <%= f.text_field :username, class: "input", autofocus: true %>
         </div>
       </div>
 
-      <div class="d-flex flex-row justify-content-center">
+      <div class="">
         <div class="">
-          <%= f.submit "Sign Up", class: "button is-primary is-large is-fullwidth" %>
+          <%= f.submit "Sign Up", class: "" %>
         </div>
       </div>
     <% end %>
