--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,40 +1,47 @@
-<h2 class="title is-2 is-spaced has-text-centered"><%= @user.username %>'s Profile</h2>
-	      <div class="columns is-centered">
-          <div class="column has-text-centered">
-            <h3 class="subtitle is-3 has-text-centered">Hosted Events: <%= @user.events.count %></h3>
-            <ul>
-              <% if @user.events.empty? %>
-                <p>User is not hosting</p>
-              <% else %>
-                <% @user.events.each do |event| %>
-                  <li class="has-text-centered"><%=link_to event.title, event_path(event) %></li>
-                <% end %>
-              <% end %>
-            </ul>
-          </div>
+<div class="d-flex flex-column align-content-center">
+    
+  <div class="d-flex flex-row justify-content-center py-3">
+    <h2><%= @user.username %>'s Profile</h2>
+  </div>
 
-          <div class="column has-text-centered">
-            <h3 class="subtitle is-3">Upcoming Events: <%= @user.attended_events.where('date >= ?', Date.today).count %></h3>
-            <ul>
-              <% if @user.attended_events.where('date >= ?', Date.today).count.zero? %>
-                <p>No planned parties</p>
-              <% else %>
-                <% @user.attended_events.where('date >= ?', Date.today).each do |event| %>
-                  <li class="has-text-centered"><%=link_to event.title, event_path(event) %></li>
-                <% end %>
-              <% end %>
-            </ul>
-          </div>
+  <div class="d-flex flex-row justify-content-around pt-3">
+    <div class="">
+      <h3 class="">Hosted Events: <%= @user.events.count %></h3>
+      <ul>
+        <% if @user.events.empty? %>
+          <p>User is not hosting</p>
+        <% else %>
+          <% @user.events.each do |event| %>
+            <li class=""><%=link_to event.title, event_path(event) %></li>
+          <% end %>
+        <% end %>
+      </ul>
+    </div>
 
-          <div class="column has-text-centered">
-            <h3 class="subtitle is-3 has-text-centered">Attended Events: <%= @user.attended_events.where('date < ?', Date.today).count %></h3>
-            <ul>
-              <% if @user.attended_events.empty? %>
-                <p>User is not partying</p>
-              <% else %>
-                <% @user.attended_events.where('date < ?', Date.today).each do |event| %>
-                  <li class="has-text-centered"><%=link_to event.title, event_path(event) %></li>
-                <% end %>
-              <% end %>
-            </ul>
-          </div>
+    <div class="">
+      <h3 class="">Upcoming Events: <%= @user.attended_events.where('date >= ?', Date.today).count %></h3>
+      <ul>
+        <% if @user.attended_events.where('date >= ?', Date.today).count.zero? %>
+          <p>No planned parties</p>
+        <% else %>
+          <% @user.attended_events.where('date >= ?', Date.today).each do |event| %>
+            <li class=""><%=link_to event.title, event_path(event) %></li>
+          <% end %>
+        <% end %>
+      </ul>
+    </div>
+
+    <div class="">
+      <h3 class="">Attended Events: <%= @user.attended_events.where('date < ?', Date.today).count %></h3>
+      <ul>
+        <% if @user.attended_events.empty? %>
+          <p>User is not partying</p>
+        <% else %>
+          <% @user.attended_events.where('date < ?', Date.today).each do |event| %>
+            <li class=""><%=link_to event.title, event_path(event) %></li>
+          <% end %>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
