--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,20 +1,29 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="pl-3">Events</h1>
+<div class="d-flex flex-row justify-content-center py-3">
+  <div class="col-5">
+    <div class="d-flex flex-row justify-content-center">
+      <h1 class="pl-3">Events</h1>
+    </div>
 
-<div class="row pl-3">
-  <h3 class="col-2">Title</h3>
-  <h3 class="col-4">Description</h3>
-  <h3 class="col-2">Date</h3>
-  <h3 class="col-1">User</h3>
-</div>
-
-<div class="row pl-3">
-  <% @events.each do |event| %>
-    <p class="col-2"><%= event.title %></p>
-    <p class="col-4"><%= event.description %></p>
-    <p class="col-2"><%= event.date %></p>
-    <p class="col-1"><%= event.user_id %></p>
-    <a class="col-2"><%= link_to 'Show', event %></a>
-  <% end %>
+    <div class="d-flex flex-column border">
+      <% @events.each do |event| %>
+        <h6 class="pl-5 pt-3">Title</h6>
+        <p class="pl-5"><%= event.title %></p>
+        <h6 class="pl-5">Description</h6>
+        <p class="pl-5"><%= event.description %></p>
+        <div class="d-flex flex-row justify-content-around">
+          <div class="f-flex flew-column">
+            <h6>Date</h6>
+            <p><%= event.date %></p>
+          </div>
+          <div class="d-flex flex-column">
+            <h6>User</h6>
+            <p><%= event.user_id %></p>
+          </div>
+        </div>
+        <a><%= link_to 'Show', event, class: "pl-5 pb-3 border-bottom" %></a>
+      <% end %>
+    </div>
+  </div>
 </div>
