--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,16 +2,12 @@
   <div class="col-4 d-flex flex-column align-items-center pt-3 pb-4">
     <%= form_with(model: user, local: true) do |f| %>
       <div class="field">
-        <div class="control">
-          <%= f.label :username, class: "label" %>
-          <br />
-          <%= f.text_field :username, class: "input", autofocus: true %>
-        </div>
+        <%= f.label :username, class: "label" %>
+        <br />
+        <%= f.text_field :username, class: "input", autofocus: true %>
       </div>
 
-      <div class="">
-        <div class="">
-          <%= f.submit "Sign Up", class: "" %>
-        </div>
+      <div>
+        <%= f.submit "Sign Up", class: "" %>
       </div>
     <% end %>
