--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,40 +5,40 @@
   </div>
 
   <div class="d-flex flex-row justify-content-around pt-3">
-    <div class="">
-      <h3 class="">Hosted Events: <%= @user.events.count %></h3>
+    <div>
+      <h3>Hosted Events: <%= @user.events.count %></h3>
       <ul>
         <% if @user.events.empty? %>
           <p>User is not hosting</p>
         <% else %>
           <% @user.events.each do |event| %>
-            <li class=""><%=link_to event.title, event_path(event) %></li>
+            <li><%=link_to event.title, event_path(event) %></li>
           <% end %>
         <% end %>
       </ul>
     </div>
 
-    <div class="">
-      <h3 class="">Upcoming Events: <%= @user.attended_events.where('date >= ?', Date.today).count %></h3>
+    <div>
+      <h3>Upcoming Events: <%= @user.attended_events.where('date >= ?', Date.today).count %></h3>
       <ul>
         <% if @user.attended_events.where('date >= ?', Date.today).count.zero? %>
           <p>No planned parties</p>
         <% else %>
           <% @user.attended_events.where('date >= ?', Date.today).each do |event| %>
-            <li class=""><%=link_to event.title, event_path(event) %></li>
+            <li><%=link_to event.title, event_path(event) %></li>
           <% end %>
         <% end %>
       </ul>
     </div>
 
-    <div class="">
-      <h3 class="">Attended Events: <%= @user.attended_events.where('date < ?', Date.today).count %></h3>
+    <div>
+      <h3>Attended Events: <%= @user.attended_events.where('date < ?', Date.today).count %></h3>
       <ul>
         <% if @user.attended_events.empty? %>
           <p>User is not partying</p>
         <% else %>
           <% @user.attended_events.where('date < ?', Date.today).each do |event| %>
-            <li class=""><%=link_to event.title, event_path(event) %></li>
+            <li><%=link_to event.title, event_path(event) %></li>
           <% end %>
         <% end %>
       </ul>
