--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,45 +1,42 @@
-<div class="d-flex flex-column">
+<div class="d-flex flex-row justify-content-center">
+  <div class="d-flex flex-column justify-content-center col-4">
   
-  <div class="d-flex flex-row justify-content-around my-3">
-    <h2>Guest List</h2>
+    <div class="d-flex flex-row justify-content-center my-3">
+      <h2>Guest List</h2>
+    </div>
+    
+
+    <div class="d-flex flex-column justify-content-around pl-5">
+      <% @users.reject { |user| user == Event.find(params[:event_id]).creator }.each do |user| %>
+        <% invitation = Invitation.find_by(event_id: params[:event_id], user_id: user.id) %>
+          
+        <div class="pt-3">
+          <h5 class="">Name</h5>
+          <%= user.username %>
+        </div>
+
+        <div class="pt-3">
+          <h5 class="">Status</h5>
+          <% unless invitation.nil? || invitation.status.nil? %>
+              <span class=""><%= invitation.status %><span>
+            <% else %>
+              ***
+            <% end %>
+        </div>
+
+        <div class="pt-3 border-bottom">
+          <h5 class="">Action</h5>
+            <% if invitation.nil? %>
+              <%= button_to "Invite", invitations_path(event_id: params[:event_id], user_id: user.id), class: "btn-success px-4 mb-4" %>
+            <% else %>
+              <%= button_to "Cancel Invitation", invitation_path(id: invitation.id, event_id: params[:event_id]), method: :delete, class: "btn-danger px-4 mb-4" %>
+            <% end %>
+        </div>
+      <% end %>
+   
+        <div class="pt-4">
+          <%= link_to 'Back to Event Details', event_path(id: params[:event_id]), class: "button is-fullwidth" %>
+        </div>
+    </div>
   </div>
-  
-  <div class="d-flex flex-row justify-content-around">
-    <h3 class="">Name</h3>
-    <h3 class="">Status</h3>
-    <h3 class="">Action</h3>
-  </div>
-
-  <div class="d-flex flex-row justify-content-around">
-    <% @users.reject { |user| user == Event.find(params[:event_id]).creator }.each do |user| %>
-      <% invitation = Invitation.find_by(event_id: params[:event_id], user_id: user.id) %>
-        
-      <div class="my-4">
-        <%= user.username %>
-      </div>
-
-      <div class="my-4">
-      <% unless invitation.nil? || invitation.status.nil? %>
-          <span class=""><%= invitation.status %><span>
-        <% else %>
-          <td></td>
-        <% end %>
-      </div>
-
-      <div class="my-4">
-        <% if invitation.nil? %>
-          <%= button_to "Invite", invitations_path(event_id: params[:event_id], user_id: user.id), class: "button is-primary is-small" %>
-        <% else %>
-          <%= button_to "Cancel Invitation", invitation_path(id: invitation.id, event_id: params[:event_id]), method: :delete, class: "button is-danger is-small" %>
-        <% end %>
-      </div>
-      
-    <% end %>
-
-  </div>
-      
-  <div class="d-flex flex-row justify-content-around">
-    <%= link_to 'Back to Event Details', event_path(id: params[:event_id]), class: "button is-fullwidth" %>
-  </div>
-
 </div>
