--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -20,7 +20,7 @@
 
     <p>
       <strong>User:</strong>
-      <%= @event.user_id %>
+      <%= @event.creator.username %>
     </p>
 
       <% if @event.creator == current_user %>
