--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,27 +1,45 @@
 <p id="notice"><%= notice %></p>
 
-<h3 class="">Upcoming Events</h3>
+<div class="d-flex flex-row justify-content-center">
+  
+  <div class="d-flex flex-column col-4 mt-3">
+    <h3 class="">Upcoming Events</h3>
 
- <% @upcoming_events.order(:date).each do |event| %>
-  <%= link_to event.title, event %>
-  <%=event.description %>
-  Starts in <%= event.date %>
-  <% if current_user %>
-    <% if current_user.invited_events.include?(event) %>
-      <li class="">
-        <%= link_to "Reservation", event, class: "" %>
-      </li>
-    <% else %>
-    <li class="">
-      <%= link_to "Details", event, class: "" %>
-    </li>
+    <% @upcoming_events.order(:date).each do |event| %>
+      <div class="pt-3">
+      <%= link_to event.title, event %>
+      </div>
+      <div class="py-3">
+      <%=event.description %>
+      </div>
+      <div class="pb-3 border-bottom">
+      Starts in <%= event.date %>
+      </div>
+      <% if current_user %>
+        <% if current_user.invited_events.include?(event) %>
+          <li class="">
+            <%= link_to "Reservation", event, class: "" %>
+          </li>
+        <% else %>
+        <li class="">
+          <%= link_to "Details", event, class: "" %>
+        </li>
+        <% end %>
+      <% end %>
     <% end %>
-  <% end %>
-<% end %>
+  </div>
 
-<h3 class="">Past Events</h3>
-<% @past_events.order(:date).limit(50).each do |event| %>
-  <li class="">
-    <%= link_to event.title, event, class: "" %>
-  </li>
-<% end %>
+  <div class="d-flex flex-column col-4 mt-3">
+    <h3>Past Events</h3>
+    
+    <% @past_events.order(:date).limit(50).each do |event| %>
+      <div class="py-3">
+        <%= link_to event.title, event, class: "" %>
+      </div>
+      <div class="pb-3 border-bottom">
+      Took place <%= event.date %>
+      </div>
+    <% end %>
+  </div>
+
+</div>
