--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -23,14 +23,14 @@
       <%= @event.creator.username %>
     </p>
 
-      <% if @event.creator == current_user %>
+      <% if current_user_is_host?(@event) %>
         <%= button_to "Invite", users_path, params: {:event_id => @event.id}, method: :get, class: "" %>
       <% else %>
-        <% invitations = Invitation.find_by(event_id: @event.id, user_id: current_user.id) %>
-        <% if invitations && !invitations.accepted? %>
-          <%= button_to "Cancel enrollment", invitation_path(id: invitations.id, event_id: @event.id, user_id: current_user.id), method: :delete, class: "" %>
+        <% invitations = Invitation.find_by(event_id: @event.id, invitee: current_user.id) %>
+        <% if invitations && accepted?(invitations) %>
+          <%= button_to "Cancel enrollment", invitation_path(id: invitations.id, event_id: @event.id, user_id: current_user.id,  status: 'cancelled'), method: :delete, class: "" %>
         <% else %>
-        <%= button_to "Enroll", invitation_path(event_id: @event.id), method: :patch, class: "" %>
+        <%= button_to "Enroll", invitation_path(event_id: @event.id, status: 'approved'), method: :patch, class: "" %>
         <% end %>
       <% end %>
 
