--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,39 +3,58 @@
 <div class="d-flex flex-row justify-content-center">
   
   <div class="d-flex flex-column col-4 mt-3">
-    <h3 class="">Upcoming Events</h3>
+    <h3>Upcoming Events</h3>
 
- <% @upcoming_events.order(:date).each do |event| %>
- <div>
-  <%=event.title %>
-  <%=event.description %>
-  Starts in <%= event.date %>
-  <% if current_user %>
-    <% if future_non_hosted_event?(event) %>
-      <li class="">
-        <%= link_to "Reservation", event, class: "" %>
-      </li>
-    <% end %>
-    <% if current_user_is_host?(event) %>
-      <li class="">
-        <%= link_to "Detail", event, class: "" %>
-      </li>
-    <% end %>
-  <% end %>
-</div>
-<% end %>
+    <div class="card">
+    
+      <% @upcoming_events.order(:date).each do |event| %>
+        
+        <div class="card-body">
+          <div class="card-title">
+            <h5><%=event.title %></h5>
+          </div>
+
+          <div class="card-text py-3">
+            <%=event.description %>
+          </div>
+        </div>
+
+        <div class="card-footer pb-3 border-bottom">
+          Starts in <%= event.date %>
+          <% if current_user %>
+            <% if future_non_hosted_event?(event) %>
+              <li>
+                <%= link_to "Reservation", event, class: "" %>
+              </li>
+            <% end %>
+            <% if current_user_is_host?(event) %>
+              <li class="">
+                <%= link_to "Detail", event, class: "" %>
+              </li>
+            <% end %>
+          <% end %>
+        </div>
+
+      <% end %>
+    </div>
+  </div>
 
   <div class="d-flex flex-column col-4 mt-3">
     <h3>Past Events</h3>
+    <div class="card">
+   
+      <% @past_events.order(:date).limit(50).each do |event| %>
+        <div class="card-body">
+          <div class="card-title py-3">
+            <%= link_to event.title, event, class: "" %>
+          </div>
+        </div>
+        <div class="card-footer pb-3 border-bottom">
+          Took place <%= event.date %>
+        </div>
+      <% end %>
     
-    <% @past_events.order(:date).limit(50).each do |event| %>
-      <div class="py-3">
-        <%= link_to event.title, event, class: "" %>
-      </div>
-      <div class="pb-3 border-bottom">
-      Took place <%= event.date %>
-      </div>
-    <% end %>
+    </div> 
   </div>
 
 </div>
