Add Css styling

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -6,7 +6,7 @@
     <div>
       <%= render 'form', event: @event %>
     </div>
-    <div>
+    <div class="mt-3">
       <%= link_to 'Back', events_path %>
     </div>
   </div>
