--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       <div class= "col-5">
         <div class="row pt-3 justify-content-around">
           <p class="nav-item">
-            <%= link_to "Create event", new_event_path, class: "text-light" %>
+            <%= link_to "Create Event", new_event_path, class: "text-light" %>
           </p>
           <% if current_user %>
             <p class="nav-item">
