--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -20,7 +20,7 @@
   <div class="field">
     <%= form.label :description %>
     <br />
-    <%= form.text_field :description %>
+    <%= form.text_area :description %>
   </div>
 
   <div class="field">
@@ -29,7 +29,7 @@
     <%= form.date_select :date %>
   </div>
 
-  <div class="actions">
+  <div class="actions pt-4">
     <%= form.submit %>
   </div>
 <% end %>
