--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,3 +42,27 @@
 
   </div>
 </div>
+
+<div class="d-flex flex-row justify-content-center mt-5">
+  <div class="d-flex flex-column col-4">
+    <h4>Invites</h4>
+    <ul class="list-group">
+      <li class="list-group-item"></li>
+      <li class="list-group-item">A second item</li>
+      <li class="list-group-item">A third item</li>
+      <li class="list-group-item">A fourth item</li>
+      <li class="list-group-item">And a fifth one</li>
+    </ul>
+  </div>
+
+  <div class="d-flex flex-column col-4">
+    <h4>Attendees</h4>
+    <ul class="list-group">
+      <li class="list-group-item"></li>
+      <li class="list-group-item">A second item</li>
+      <li class="list-group-item">A third item</li>
+      <li class="list-group-item">A fourth item</li>
+      <li class="list-group-item">And a fifth one</li>
+    </ul>
+  </div>
+</div>
