update controllers and views

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,12 +2,12 @@
   <div class="d-flex flex-column justify-content-center col-4">
   
     <div class="d-flex flex-row justify-content-center my-3">
-      <h2>Guest List</h2>
+      <h2>Guest List for <%= @event.title %> </h2>
     </div>
     
 
     <div class="d-flex flex-column justify-content-around pl-5">
-      <% @users.reject { |user| user == Event.find(params[:event_id]).creator }.each do |user| %>
+      <% @users_show.each do |user| %>
 
         <div class="pt-3">
           <h5 class="">Name</h5>
@@ -20,7 +20,7 @@
           <% unless find_invitation_element(@event, user).nil? %>
               <span class=""><%= find_invitation_element(@event, user).status %><span>
             <% else %>
-              ***
+              no invited
             <% end %>
         </div>
 
@@ -29,7 +29,7 @@
           <% if find_invitation_element(@event, user).nil? %>
               <%= button_to "Invite", invitations_path(event_id: params[:event_id], user_id: user.id), class: "btn-success px-4 mb-4" %>
             <% else %>
-              <%= button_to "Cancel Invitation", invitation_path(id: find_invitation_element(@event, user).id,event_id: @event.id, user_id: user.id,  status: 'cancelled'), method: :delete, class: ""  %>
+              <%= button_to "Cancel Invitation", invitation_path(id: find_invitation_element(@event, user).id,event_id: @event.id, user_id: user.id,  status: 'cancelled'), method: :delete, class: "btn-danger px-4 mb-4"  %>
             <% end %>
         </div>
         <% end %>
