--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,9 +27,9 @@
       <% if current_user_is_host?(@event) %>
         <%= button_to "Invite", users_path, params: {:event_id => @event.id}, method: :get, class: "btn-success px-5" %>
       <% else %>
-        <% invitations = Invitation.find_by(event_id: @event.id, invitee: current_user.id) %>
-        <% if invitations && accepted?(invitations) %>
-          <%= button_to "Cancel enrollment", invitation_path(id: invitations.id, event_id: @event.id, user_id: current_user.id,  status: 'cancelled'), method: :delete, class: "btn-danger px-5" %>
+
+        <% if accepted?(@reservation) %>
+          <%= button_to "Cancel enrollment", invitation_path(id: @reservation.id, event_id: @event.id, user_id: current_user.id,  status: 'cancelled'), method: :delete, class: "btn-danger px-5" %>
         <% else %>
         <%= button_to "Enroll", invitation_path(event_id: @event.id, status: 'approved'), method: :patch, class: "btn-success px-5" %>
         <% end %>
@@ -46,23 +46,25 @@
 <div class="d-flex flex-row justify-content-center mt-5">
   <div class="d-flex flex-column col-4">
     <h4>Invites</h4>
+    
     <ul class="list-group">
-      <li class="list-group-item"></li>
-      <li class="list-group-item">A second item</li>
-      <li class="list-group-item">A third item</li>
-      <li class="list-group-item">A fourth item</li>
-      <li class="list-group-item">And a fifth one</li>
+      <% @invites.each do |invitation| %>
+        <li class="list-group-item"><%= invitation.invitee.username %></li>
+      <% end %>
+    </ul>
+    <ul class="list-group">
+      <% @cancelled.each do |invitation| %>
+        <li class="list-group-item"><%= invitation.invitee.username %></li>
+      <% end %>
     </ul>
   </div>
 
   <div class="d-flex flex-column col-4">
     <h4>Attendees</h4>
     <ul class="list-group">
-      <li class="list-group-item"></li>
-      <li class="list-group-item">A second item</li>
-      <li class="list-group-item">A third item</li>
-      <li class="list-group-item">A fourth item</li>
-      <li class="list-group-item">And a fifth one</li>
+      <% @attending.each do |invitation| %>
+        <li class="list-group-item"><%=  invitation.invitee.username %></li>
+      <% end %>
     </ul>
   </div>
 </div>
